<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_real_name"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:textSize="30sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_sub_title"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/input_account"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/login_edittext_bg"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:gravity="center"
            android:textColorHint="@color/textColor"
            android:hint="@string/login_hint_account"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/input_password"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_edittext_bg"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:gravity="center"
            android:textColorHint="@color/textColor"
            android:hint="@string/login_hint_password"
            android:maxLines="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/button_login"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/login_button_bg"
            android:textColor="@color/textColor"
            android:textSize="17sp"
            android:gravity="center"
            android:text="登录"/>
        <Button
            android:id="@+id/button_register"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/login_button_bg"
            android:textColor="@color/textColor"
            android:textSize="17sp"
            android:gravity="center"
            android:text="注册"/>

        <TextView
            android:id="@+id/button_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:textSize="17sp"
            android:text="@string/login_button_forget_password"/>
        <CheckBox
            android:id="@+id/option_remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="记住账号密码"
            android:textColor="@color/textColor"
            android:textSize="17sp"
            android:checked="false"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/textColor"
            android:gravity="center"
            android:text="@string/login_divide"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/textColor"
            android:text="暂不支持第三方软件登录" />
    </LinearLayout>
</LinearLayout>