<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <include layout="@layout/title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_real_name"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:textSize="30sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_sub_title"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_edittext_bg">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="17dp"
            android:scaleType="fitXY"
            android:src="@drawable/register_icon2"/>
        <EditText
            android:id="@+id/register_input_phone_number"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@null"
            android:layout_marginLeft="18dp"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:textColorHint="@color/textColor"
            android:hint="@string/register_hint_phonenumber"
            android:maxLines="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_edittext_bg">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/register_icon3"/>
        <EditText
            android:id="@+id/register_input_password"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@null"
            android:layout_marginLeft="10dp"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:textColorHint="@color/textColor"
            android:hint="@string/register_hint_password"
            android:maxLines="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_edittext_bg">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="17dp"
            android:scaleType="fitXY"
            android:src="@drawable/register_icon2"/>
        <EditText
            android:id="@+id/register_input_verification_code"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@null"
            android:layout_marginLeft="18dp"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:textColorHint="@color/textColor"
            android:hint="@string/register_hint_verification_code"
            android:maxLines="1"/>
        <Button
            android:id="@+id/register_get_verification_code"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/register_button_bg"
            android:textColor="@color/textColor"
            android:textSize="17sp"
            android:gravity="center"
            android:text="获得验证码"/>
    </LinearLayout>
    <Button
        android:id="@+id/register_button_reigster"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_blue"
        android:textColor="@color/textColor"
        android:textSize="17sp"
        android:gravity="center"
        android:text="注册"/>
</LinearLayout>